# TATools-Python

./: .gitignore  LICENSE  pyproject.toml
src/TATools/: __init__.py
src/TATools/cli/: convert_opera_legacy.py  convert_opera_legacy.txt  convert_opera_primaryraw.py  file_util.py  opera_primaryraw_to_pulses.py  opera_primaryraw_to_pulses_no_buffnum_no_peakidx.py  opera_raw_csv_to_pulses.py  structs.py
src/TATools/examples/snippets/: multi_yaxis.py  timeseries_dual_axis.py
src/TATools/ipython/: __init__.py  _examples.py  _templates.py
src/TATools/plotting/: __init__.py  aps.py  duet.py  figures.py  labeling.py  normalization.py  opera.py  smoothing.py  util.py  wps.py
src/TATools/processing/: __init__.py  aps.py  opera.py  util.py  wps.py
src/TATools/smoothing/: __init__.py  normalization.py  preprocessing.py  smoothing.py
