[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TATools"
version = "0.1.0"
description = "Reusable plotting, smoothing, and normalization helpers for pandas/Matplotlib time series."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Brandon Beattie", email = "brandon.beattie@telosair.com" }
]
keywords = ["matplotlib", "pandas", "plotting", "data-science", "time-series"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Visualization"
]

# Core dependencies everyone needs
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.8",
]

# Optional extras for convenience installs
[project.optional-dependencies]
jupyter = ["notebook>=7"]
widgets = ["ipympl>=0.9"]
qt = ["PyQt5>=5.15"]
dev = ["pytest", "ruff", "mypy", "build", "hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/TATools"]

[tool.hatch.build.targets.sdist]
include = ["src/TATools", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build]
include = [
  "src/TATools/examples/**/*",
]
